# irregular-researchtools

./: .dockerignore  .env-example  .env.example  .gitignore  ANALYTICS_DASHBOARD.md  AUTO_SAVE_ROADMAP.md  CLAUDE_MD_UPDATE_ANALYSIS.md  CLOUDFLARE_DEPLOYMENT_STATUS.md  CLOUDFLARE_DEPLOYMENT_SUCCESS.md  CLOUDFLARE_REACT_MIGRATION_PLAN.md  CLUADE 2.md  CLUADE.md  CRITICAL_ISSUES_DIAGNOSIS_PLAN.md  Cloudflare_React_Development_Guide.md  DEPLOYMENT.md  DJANGO_TYPESCRIPT_REFACTOR_PLAN.md  Dockerfile  EVIDENCE_ARCHITECTURE.md  EVIDENCE_AUTO_LINKING.md  FRAMEWORK_AUDIT.md  IMPLEMENTATION_EXAMPLE.md  IMPLEMENTATION_PLAN.md  LICENSE  LOGIN_DIAGNOSIS_PLAN.md  LOGIN_FIX_SUMMARY.md  Lessons_Learned.md  MIGRATION_ROADMAP_MASTER.md  MIGRATION_STATUS_REPORT.md  MOBILE_UX_IMPROVEMENTS.md  PHASE_4_PLAN.md  README.md  REFACTOR_ROADMAP 2.md  REFACTOR_ROADMAP 3.md  REFACTOR_ROADMAP.md  ROADMAP.md  STRATEGIC_IMPLEMENTATION_SUMMARY.md  TEAM_COLLABORATION_DESIGN.md  TESTING_INSTRUCTIONS.md  WEB_SCRAPING_AND_EVIDENCE_ROADMAP.md  app.py  (+20 more)
api/: .env 2.example  API_ENDPOINTS.md  Dockerfile 3  FRAMEWORK_API_SUMMARY.md  README 2.md  docker-compose 2.yml  docker-compose.yml  omnicore.db  omnicore.db.backup2  pyproject 2.toml  pyproject.toml
api/app/: __init__ 3.py  main.py
api/app/api/v1/: api.py
api/app/api/v1/endpoints/: ach.py  ai.py  auth.py  auth_fix.py  behavioral.py  causeway.py  cog.py  deception.py  dime.py  dotmlpf.py  frameworks.py  hash_auth.py  health.py  pmesii_pt.py  starbursting.py  swot.py  users.py
api/app/api/v1/endpoints/tools/: __init__.py  citations.py  document_processing.py  social_media.py  url_processing.py  web_scraping.py
api/app/core/: config.py  database.py  logging.py  security.py
api/app/models/: auth_log.py  base.py  framework.py  research_tool.py  user.py
api/app/services/: ai_service.py  framework_service.py  url_service.py
api/tests/: __init__ 3.py  conftest.py  test_auth 2.py  test_health.py  test_swot.py
components/: login.py  sidebar_menu.py
frameworks/: __init__.py  ach.py  base_framework.py  behavior_analysis.py  causeway.py  cog.py  deception_detection.py  dime.py  dotmlpf.py  frameworks.py  fundamental_flow.py  graph_utils.py  pmesii_pt.py  pmesii_pt.py.bak  starbursting.py  swot.py  visualization_styles.css
frontend/: .eslintrc.json  Dockerfile  Dockerfile.dev  next.config.js  next.config.ts  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend-react/: ACH_ROADMAP.md  AI_INTEGRATION_PLAN.md  BATCH_PROCESSING_PLAN.md  BCW_SEPARATION_PLAN.md  BEHAVIOR_ANALYSIS_BCW_ENHANCEMENT_PLAN.md  BEHAVIOR_ANALYSIS_IMPROVEMENTS.md  BEHAVIOR_REPORT_FINAL_SUMMARY.md  BEHAVIOR_REPORT_REQUIREMENTS.md  BEHAVIOR_REPORT_UPDATE_SUMMARY.md  CITATIONS_QA_INTEGRATION_PLAN.md  CITATION_EDITING_PLAN.md  COG_AND_CAUSEWAY_REVIEW.md  COMPREHENSIVE_FIXES_PLAN.md  CONTENT_INTELLIGENCE_CITATION_INTEGRATION.md  CONTENT_INTELLIGENCE_IMPLEMENTATION_PLAN.md  CURRENT_STATUS_AND_ROADMAP.md  Cloudflare_React_Development_Guide.md  DATASET_TO_EVIDENCE_MIGRATION_PLAN.md  DEPLOYMENT_STATUS_v2.1.0.md  ENTITY_SYSTEM_PHASE1_STATUS.md  EVIDENCE_SYSTEM_MIGRATION.md  FINAL_MIGRATION_SUMMARY.md  FRAMEWORK_REPORTS_PLAN.md  MULTILANGUAGE_READINESS_REVIEW.md  NETWORK_ANALYSIS_PLAN.md  PUBLIC_SHARING_PLAN.md  QUESTION_ANSWER_PLAN.md  README.md  SOCIAL_MEDIA_INTEGRATION_SUMMARY.md  SPANISH_INTERNATIONALIZATION_PLAN.md  SURVEILLANCE_FUNDAMENTAL_FLOW_IMPLEMENTATION.md  SURVEILLANCE_FUNDAMENTAL_FLOW_PLAN.md  SYMBOLS_MEDIA_ENHANCEMENT.md  SYSTEM_REVIEW_SUMMARY.md  UNFINISHED_ITEMS_LIST.md  URL_SCRAPING_PLAN.md  VIRUSTOTAL_INTEGRATION.md  index.html  lessonslearned-gpt-cloudflare-workers.md  package-lock.json  (+6 more)
migration-plans/: PHASE_2_FRAMEWORK_CRUD.md  PHASE_3_COMPLEX_FRAMEWORKS.md
pages/: ACH.py  COG.py  COG_Analysis.py  Frameworks.py  Home.py  ImageSearch.py  SWOT.py  Tools.py  Transformers.py  WaybackTool.py  sidebar_menu.py
tests/: conftest.py  requirements-test 2.txt  run_docker_build.sh  standalone_locations_to_kml.py  test_causeway.py  test_cog 2.py  test_cog.py  test_components.py  test_config.py  test_data_cleaning.py  test_deception.py  test_external_apis.py  test_frameworks.py  test_helpers.py  test_image_search.py  test_pages.py  test_pdf_exports.py  test_performance.py  test_search 2.py  test_social_media.py  test_url_processing.py  test_utils_conversion.py  test_utils_openai.py
utilities/: ImageSearch.py  WaybackTool.py  accounts.py  advanced_scraper.py  conversions.py  form_handling.py  google_scraper.py  gpt.py  helpers.py  locations_to_kml.py  oidc.py  search_generator.py  (+7 more)
(+486 files in other folders)
